[package]
name = "dropshot-main"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dropshot="0.5.1"
http = "0.2.5"

[dependencies.hyper]
version = "0.14"
features = [ "full" ]

[dependencies.serde]
version = "1.0.130"
features = [ "derive" ]

[dependencies.schemars]
version = "0.8.6"
features = [ "uuid" ]

[dependencies.tokio]
version = "1.13"
features = [ "full" ]

[dependencies.dropshot_endpoint]
version = "0.5.1"

[profile.release]
debug = true